# livestream-tutorial-course-hf

./: .gitignore  README.md  main.py  pyproject.toml
backend/: .excalidraw
backend/b1/: main.js
backend/b2/: .excalidraw  main.js
backend/b3/: .excalidraw  main.js
backend/b4/: .excalidraw  main.js
backend/b5/: .excalidraw  main.js
backend/b6/: .excalidraw  package-lock.json  package.json
backend/b7/: .excalidraw  package-lock.json  package.json  tsconfig.json
frontend/b1/: .excalidraw  index.html
practice-py/l1/: .excalidraw  dev.txt  main.py
practice-py/l10/: .excalidraw  main.py  test.py
practice-py/l11/: .excalidraw  ex.py  main.py
practice-py/l12/: .excalidraw  main.py
practice-py/l13/: .excalidraw  main.py  test.py
practice-py/l2/: .excalidraw  main.py
practice-py/l3/: .excalidraw  main.py
practice-py/l4/: .excalidraw  main.py
practice-py/l5/: .excalidraw  main.py
practice-py/l6/: .excalidraw  main.py
practice-py/l7/: 0001-2016. Maximum Difference Between Increasing Elements.py  0002-2099. Find Subsequence of Length K With the Largest Sum.py
practice-py/l8/: .excalidraw  main.py
practice-py/l9/: .excalidraw  main.py
python/b1/: .excalidraw  main.py
python/b10/: .excalidraw  main.py
python/b11/: .excalidraw  main.py
python/b12/: .excalidraw  main.py
python/b13/: .excalidraw  main.py
python/b14/: .excalidraw  main.py
python/b15/: .excalidraw  main.py
python/b16/: .excalidraw  main.py
python/b17/: .excalidraw  main.py
python/b18/: .excalidraw  main.py
python/b19/: .excalidraw  main.py
python/b2/: main.py  (+1 more)
(+113 files in other folders)
