[project]
name = "livestream-tutorial-course-hf"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-experimental>=0.3.4",
    "langchain-ollama>=0.3.10",
    "litellm>=1.77.7",
    "reflex>=0.8.14.post1",
]
